# Maven-GitAccountManager

./: .gitignore  Cargo.toml  README.md
src/: get_account_info_user.rs  main.rs  manager.rs  push_script.rs  retrieve_account_info.rs  set_git_config.rs
src/libs/: display_accounts.rs  file_operation.rs  mod.rs  validate.rs
